create and style user part of navbar

--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@
                     <img src="./img/avatar-profile.png" alt="Profile Picute" width="40px" class="navbar-avatar">
                     <h5>Morgan Oakley</h5>
                 </div>
-                <div class="user"></div>
+                <div class="user">
+                    <div class="left">
+                        <img src="./img/avatar-profile.png" alt="Profile picture" width="55px" class="profile-pic">
+                        <div class="welcome-text">
+                            <p>Hi there,</p>
+                            <h4>Morgan Oakley (@morgan)</h4>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </div>
+                </div>
             </div>
             <div class="content"></div>
         </div>
