create and sytle announcemetns and trending and finish project

--- a/index.html
+++ b/index.html
@@ -168,7 +168,73 @@
                         </div>
                     </div>
                 </div>
-                <div class="ann-trending">Hello</div>
+                <div class="ann-trend">
+                    <div class="ann">
+                        <h4>Announcements</h4>
+                        <div class="ann-card">
+                            <div class="ann-text">
+                                <h6>Site Maintenance</h6>
+                                <p>
+                                    Vestibulum condimentum tellus lacus,
+                                    in accumsan elit maximus ac. Donec
+                                    hendrerit sodales congue...
+                                </p>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="ann-text">
+                                <h6>Community Share Day</h6>
+                                <p>
+                                    Nam vel lectus tincidunt, rutrum nulla
+                                    eu, ornare libero. Aliquam dictum
+                                    accumsan porttitor...
+                                </p>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="ann-text">
+                                <h6>Updated Privacy Policy</h6>
+                                <p>
+                                    Phasellus efficitur nisi eget elit
+                                    consectetur, eget condimentum ante
+                                    auctor. Cras fringilla sagittis sem in
+                                    mattis...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <h4>Trending</h4>
+                        <div class="trend-card">
+                            <div class="trend-image-text">
+                                <img src="./img/img1.png" alt="Profile picture">
+                                <div class="trend-text">
+                                    <h6>@tegan</h6>
+                                    <p>World Peace Builder</p>
+                                </div>
+                            </div>
+                            <div class="trend-image-text">
+                                <img src="./img/avatar-profile.png" alt="Profile picture">
+                                <div class="trend-text">
+                                    <h6>@morgan</h6>
+                                    <p>Super Cool Project</p>
+                                </div>
+                            </div>
+                            <div class="trend-image-text">
+                                <img src="./img/img2.png" alt="Profile Picture">
+                                <div class="trend-text">
+                                    <h6>@kendall</h6>
+                                    <p>Life Changing App</p>
+                                </div>
+                            </div>
+                            <div class="trend-image-text">
+                                <img src="./img/img3.png" alt="Profile Picture">
+                                <div class="trend-text">
+                                    <h6>@alex</h6>
+                                    <p>No Traffic Maker</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>    
